# ZAPPY

./: .gitignore  CMakeLists.txt  Protocol.md  README.md  build.sh  clean.sh  unit_tests_gui  unit_tests_server
Client/: bot.py  connection_info.py  manage_collect.py  manage_level_up.py  parser.py  strategies.py  zappy_ai.py
GUI/: camera.cpp  culling.cpp  gui.cpp  gui.hpp  parasite.cpp  playerUI.cpp  position_cache.cpp  render.cpp  tileUI.cpp
GUI/Data/: egg.cpp  interaction.cpp  interaction.hpp  player.cpp  player_sprite.cpp  player_sprite.hpp
GUI/LoadingScreen/: loading.cpp  loading.hpp
GUI/Menu/: GameEndScreen.cpp  GameEndScreen.hpp  InGameInfoMenu.cpp  InGameInfoMenu.hpp  InGameMenu.cpp  InGameMenu.hpp  Menu.cpp  Menu.hpp
GUI/Network/: network.cpp  network.hpp
GUI/Settings/: Setting.cpp  Setting.hpp
GUI/Themes/: Theme.cpp  Theme.hpp
GUI/World/: tile.cpp  tile.hpp  world.cpp  world.hpp
Include/: communication.h  data.h  player.h  server.h  world.h
Info/: GUI.md  IA.md
Server/Commands/: command_queue.c  handle.c  verif.c
Server/Commands/GUI/: bct.c  gui_commands.c  mct.c  msz.c  pin.c  plv.c  sgt.c  sst.c  tna.c
Server/Commands/IA/: broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  left.c  look.c  player_nbr.c  right.c  setobj.c  takeobj.c  verif_incant.c
Server/Data/: gest_clients_data.c  parse_args.c  run_server.c  send_data.c  server.c
Server/Update/: client_connection.c  egg_management.c  gest_messages.c  manage_gui.c  manage_zappy.c  survival_system.c  team_management.c  victory_system.c
Server/World/: init_world.c  regenerate_ress.c  world_utils.c
Test/: CMakeLists.txt  tests.cpp  tests_server.c
